fixed error in projects.html

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
             <div class="project-card">
                 <a href="yelp_clone.html">
-                    <h3 class="project-title">Home</h3>
+                    <h3 class="project-title">Yelp Clone</h3>
                     <p class="project-description">
                         A Yelp clone Android application that allows users to search for restaurants using the Yelp API. 
                         Users can view restaurant details, store previous reviews, and navigate through custom-designed screens.
